Guidebook: fix docs on what the app.jvm.modules key can do.